Fixed bug where pages may not stretch to full height of screen.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,7 @@
+.full-height {
+  min-height: 100vh;
+}
+
 #account {
   background-color: rgba(70, 79, 113, 0.4);
   border: 1px solid $grey;
